feat(android): add internal alpha workspace
